# rust_practicum_with_friends

./: Cargo.toml  docker-compose.yml  readme.md
server/: .env  Cargo.toml  Makefile.toml
server/src/: config.rs  lib.rs  logs.rs  main.rs
server/src/domains/: mod.rs
server/src/domains/todo/: mod.rs
server/src/domains/todo/models/: mod.rs
server/src/domains/todo/repositories/: todo.rs
server/src/domains/todo/routes/: create.rs  list.rs  mod.rs  toggle.rs
server/src/modules/: mod.rs  mongo.rs
src/: lib.rs  main.rs
src/server/: mod.rs  readme.tldr
src/todo/: mod.rs
tests/: can_create_todo.rs
todo/: Cargo.toml
todo/src/todo/: readme.md
todo/tests/: can_create_todo.rs
