[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
env_logger = "0.9.1"
log = "0.4.17"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
todo = { version = "0.1.0", path = "../todo" }
tokio = { version = "1.21.2", features = ["full"] }
