[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
cuid = "1.2.0"
env_logger = "0.9.1"
envy = "0.4.2"
fake = "2.5.0"
log = "0.4.17"
mongodb = "2.3.0"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = ["full"] }
